# beast_utils

./: README.md  pyproject.toml
src/beast/: __init__.py  add_taxon.py  add_taxon_attributes.py  io.py  markov_jump.py  predictor.py  set_run_length.py  starting_tree.py  taxon.py  taxon_attributes.py  templating.py  update_from_template.py  utils.py
src/beast/substitution_model/: substitution_model.py
src/beast/substitution_model/iqtree/: read_model_test.py
src/beast/substitution_model/templates/: f81.xml  gtr.xml  hky.xml  proportion_invariant.xml  tn93.xml  tvm.xml
src/beast_utils/: __init__.py  markov_jump.py  predictor.py  starting_tree.py  taxon_attributes.py  templating.py  utils.py
src/beast_utils/substitution_model/: substitution_model.py
src/beast_utils/substitution_model/iqtree/: __init__.py
src/beast_utils/substitution_model/templates/: estimated_frequencies.xml  gamma.xml  gtr.xml  hky.xml  jc69.xml  k3p.xml  k80.xml  proportion_invariant.xml  sym.xml  tim.xml
