[tool.poetry]
name = "beast-utils"
version = "0.1.0"
description = "Generate and manipulate BEAST XML files."
authors = ["Nardus Mollentze <nardus.mollentze@glasgow.ac.uk>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [{include = "beast_utils"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^4.9.1"
numpy = "^1.22.3"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/nardus/beast_utils/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
